--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ html {
     outline: 2px solid rgb(63, 141, 243);
   }
 
-  .form input[type="submit"] {
+  .form input[type="submit"],.btn {
     padding: 0.5em 0.75em;
     font-size: 1.5rem;
     border-radius: 5px;
@@ -84,6 +84,10 @@ html {
     color: white;
     padding: 1rem;
     margin: 0.5em 0;
+  }
+
+  .btn {
+    visibility: hidden;
   }
 
   @media (max-width: 700px) {
